--- a/robot.html
+++ b/robot.html
@@ -14,7 +14,7 @@
         <div class="menu"><a href="index.html#event_overview">행사개요</a></div>
         <div class="menu"><a href="index.html#main_program">프로그램</a></div>
         <div id="logo">
-          <a href="#" onclick="return false">
+          <a href="index.html">
               <img src="/sw2025/images/logo.svg" alt=""/>
           </a>
         </div>
@@ -29,44 +29,19 @@
       </div>
     </header>
      <div class="menu-wrap-mobile">
-        <a href="/sw2025/">행사개요</a>
+        <a href="#event_overview">행사개요</a>
         <a href="#main_program">프로그램</a>
         <a href="#event">이벤트</a>
         <a href="#notice">공지사항</a>
         <a href="#directions">오시는길</a>
      </div>
-    <div class="wrap">
-      <div id="banner">
-        <img src="/sw2025/images/01_banner.png" alt="경기SW미래채움" />
+
+         <img src="/sw2025/images/09_robot.png" alt="" class="program_more_img">
+
+       <div class="main_btn df blue2">
+        <a href="robot_num.html" class="mr20 btn_b">체험확인</a>
+        <a href="index.html" class="btn_w">홈으로</a>
       </div>
-      <div class="main_btn">
-        <a href="#" onClick="alert('사전예약이 종료되었습니다.')">사전예약</a>
-        <a href="#" onClick="alert('사전예약이 종료되었습니다.')" class="center">예약확인</a>
-        <a href="robot.html">체험확인</a>
-      </div>
-      <div id="event_overview">
-        <img src="/sw2025/images/02_event_overview.png" alt="행사개요" />
-      </div>
-      <div id="main_program">
-        <img src="/sw2025/images/03_program.png" alt="프로그램 소개" />
-      </div>
-      <div class="program_more">
-        <a href="/sw2025/program_more.html">프로그램 일정 더보기</a>
-      </div>
-      <div id="event">
-        <img src="/sw2025/images/04_event.png" alt="이벤트" />
-      </div>
-      <div id="notice">
-        <img src="/sw2025/images/05_notic.png" alt="공지사항" />
-      </div>
-      <div id="to">
-        <img src="/sw2025/images/06_to.png" alt="함께보기" />
-      </div>
-      <div id="directions">
-          <img src="/sw2025/images/07_map.png" alt="오시는길" />
-        </div>
-        <div><img src="/sw2025/images/08_footer.png" alt="풋터" /></div>
-    </div>
     
     <script src="../sw2025/index.js"></script>
   </body>
