우선 데스크탑 완료

--- a/ver2/index.html
+++ b/ver2/index.html
@@ -46,14 +46,14 @@
                         <div class="ic_banner"><i class="fi fi-rs-marker"></i></div>
                         <div class="bti_title">장소</div>
                         <div>
-                            <span class="tc_yellow fwb">경기도경제과학진흥원 1층 </span>광교홀
+                            <span class="tc_yellow fwb">경기도경제과학진흥원 1층<br> </span>광교홀
                             및 로비
                             <div>
                                 경기도 수원시 영통구 광교로 107 경기도 경제과학진흥원
                             </div>
                         </div>
                     </div>
-                    <div class="btn_banner fwb"><a href="">참여확인</a></div>
+                    <div class="btn_banner fwb"><a href="robot.html">참여확인</a></div>
                 </div>
                 <img src="./images/banner_img.png" alt="" class="banner_img" />
             </div>
@@ -267,7 +267,7 @@
                 <div class="event_robot">
                     <div class="event_box">
                         <div class="event_title">이벤트 02</div>
-                        <div class="event_text">SNS <span class="evi_point">후기 or</span> 만족도 조사<span class="evi_point"> 이벤트</span></div>
+                        <div class="event_text">로봇 <span class="evi_point">레벨업</span> 이벤트 </div>
                         <div class="event_step">
                             <div class="es_step">
                                 <img src="./images/event_ic_step.png" alt="" class="es_step_img">
